--- a/QLTTNN/BUS/BUS.csproj
+++ b/QLTTNN/BUS/BUS.csproj
@@ -39,6 +39,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DiaDiem.cs" />
     <Compile Include="KetQua.cs" />
     <Compile Include="KhoaThi.cs" />
     <Compile Include="PhieuDuThi.cs" />
