--- a/QLTTNN/DAL/App.config
+++ b/QLTTNN/DAL/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="DAL.Properties.Settings.TrungTamNgoaiNguDBConnectionString"
+            connectionString="Data Source=DESKTOP-3T163PO\SQLEXPRESS;Initial Catalog=TrungTamNgoaiNguDB;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
