U make me CLown

--- a/QLTTNN/Backend/App.config
+++ b/QLTTNN/Backend/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="DAL.Properties.Settings.TrungTamNgoaiNguDBConnectionString"
+        <add name="Backend.Properties.Settings.TrungTamNgoaiNguDBConnectionString"
             connectionString="Data Source=DESKTOP-3T163PO\SQLEXPRESS;Initial Catalog=TrungTamNgoaiNguDB;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
