--- a/QLTTNN/Winform/Winform.csproj
+++ b/QLTTNN/Winform/Winform.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Backend">
+      <HintPath>..\Backend\bin\Debug\Backend.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +49,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacHamCheck.cs" />
+    <Compile Include="DangKyChoThiSinh\DangKy_ThiSinh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DangKyChoThiSinh\DangKy_ThiSinh.Designer.cs">
+      <DependentUpon>DangKy_ThiSinh.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DanhSachThiSinhTheoPhongThi\DanhSachThiSinh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhSachThiSinhTheoPhongThi\DanhSachThiSinh.Designer.cs">
+      <DependentUpon>DanhSachThiSinh.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +70,21 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimKiemThongTinThiSinh\TimKiemThongTIn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TimKiemThongTinThiSinh\TimKiemThongTIn.Designer.cs">
+      <DependentUpon>TimKiemThongTIn.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="DangKyChoThiSinh\DangKy_ThiSinh.resx">
+      <DependentUpon>DangKy_ThiSinh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DanhSachThiSinhTheoPhongThi\DanhSachThiSinh.resx">
+      <DependentUpon>DanhSachThiSinh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +94,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TimKiemThongTinThiSinh\TimKiemThongTIn.resx">
+      <DependentUpon>TimKiemThongTIn.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -75,6 +109,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NhapDiemChoPhongThi\" />
+    <Folder Include="QuanLyPhongThi\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
